--- a/teaching.htm
+++ b/teaching.htm
@@ -127,7 +127,7 @@ function myFunction() {
 <h3><font color="#002F6C">PHS 5705 / BIMS 8075 / BIOC 5705: Recent Advances in Public Health Genomics</font></h3>
 <p>Spring 2020 <a href="slides/PHS5705_2020_Zang_Epigenome.pdf" target="_blank">Lecture: The epigenome: Transcription factors and histone modifications</a>
 </p>
-<p>Spring 2017 <a href="PHS5705_032017_Zang_slides.pdf" target="_blank">Lecture: The Epigenome: Tools</a>
+<p>Spring 2017 <a href="slides/PHS5705_032017_Zang_slides.pdf" target="_blank">Lecture: The Epigenome: Tools</a>
 </p>
 <hr>
 <h3><font color="#002F6C">BIOL 4910 / CHEM 3951: Undergraduate Research</font></h3>
@@ -135,8 +135,7 @@ function myFunction() {
 <hr>
 <h3><font color="#002F6C">ChIP-Seq Data Analysis Workshop (NIH, May 2016)</font></h3>
 <p>
-<!--<a href="http://cistrome.org/~czang/chipseqdata.htm" target="_blank">link</a>-->
-<a href="ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
+<a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
 <p align="right">Last modified: June 20, 2020</p>
