--- a/index.htm
+++ b/index.htm
@@ -113,16 +113,16 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
-      <img src="ism/image/slides/_u/1488566891987_67648.jpg">
+      <img src="images/1488566891987_67648.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/20191101_3.jpg">
+      <img src="images/20191101_3.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/1488567032192_666768.jpg">
+      <img src="images/1488567032192_666768.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/1488736436612_647904.png">
+      <img src="images/1488736436612_647904.png">
     </li>
   </ol>
 </div>
