--- a/people.htm
+++ b/people.htm
@@ -113,34 +113,34 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
-      <img src="ism/image/slides/_u/20191101_1.jpg">
+      <img src="images/20191101_1.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/20191101_2.jpg">
+      <img src="images/20191101_2.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/20191026.jpg">
+      <img src="images/20191026.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/20190718.jpg">
+      <img src="images/20190718.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/people07.jpg">
+      <img src="images/people07.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/1488727852701_364381.jpg">
+      <img src="images/1488727852701_364381.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/people05.jpg">
+      <img src="images/people05.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/people04.jpg">
+      <img src="images/people04.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/people03.jpg">
+      <img src="images/people03.jpg">
     </li>
     <li>
-      <img src="ism/image/slides/_u/people01.jpg">
+      <img src="images/people01.jpg">
     </li>
   </ol>
 </div>
