--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=http://faculty.virginia.edu/zanglab" />
+    <meta http-equiv="Refresh" content="0; url=index.htm" />
   </head>
 </html>
