--- a/bartcancer/index.html
+++ b/bartcancer/index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<title>BART Cancer</title>
+<link href="mainStyle.css" rel="stylesheet"/>
+<link href="tabulator/dist/css/tabulator.css" rel="stylesheet">
+<script type="text/javascript" src="tabulator/dist/js/tabulator.js"></script>
+<script src="homePage.js"></script>
+<script src="https://d3js.org/d3.v4.js"></script>
 
+
+</head>
+<body onload="loadme()">
+<div id="container">
+  <div id="mainnav">
+    <ul>
+	  <li><a href="">Home</a></li>
+	  <li><a href="help/index.html">Help</a></li>
+	  <li><a href="contact/index.html">Contact</a></li>
+	  <li><a href="http://bartweb.org/" target="_blank">BARTWEB</a></li>   
+    </ul>
+  </div>
+  <div id="header">
+    <h1>Welcome to BART Cancer Database!</h1>
+	  <p> BART Cancer is an interactive database for predicted transcriptional <br>regulators  that drive gene expression 
+    in 15 cancer types in TCGA.</p>
+  </div>
+
+  <div id="content">
+    <h1>BART Cancer Transcriptional Regulators</h1>
+    <p>BART Cancer Database is a web resource designed to display putative transcriptional regulators (TRs)
+      that are responsible for up and downregulation of genes in 15 different cancer types in The Cancer Genome Atlas.
+      BART Cancer uses BART (Binding Analysis for Regulation of Transcription) to make the prediction.
+      <span style="vertical-align:-37%">&nbsp;</span><br>
+      BART Cancer integrated over 10,000 gene expression profiling datasets from TCGA with over 7,000 TR ChIP-seq 
+      datasets from the Cistrome database and the public domain.
+      <span style="vertical-align:-37%">&nbsp;</span><br>
+      For information on the different cancer types and how data was selected and analyzed, please refer to the help page.
+    </p>
+
+    <hr>
+
+    <h1>BART Results</h1>
+    <div id="content">
+        <div style="width:30%; float:left">
+          <h2>Select a cancer type and differentail expression type to view BART results</h2>
+          <form class="form" action="" method="post">
+            <p class="selectionHeader"><u>Select Cancer Type</u></p>
+          <div class="radio-toolbar">
+            <label><input type="radio" name="cancerType" value="BLCA" checked>Bladder Urothelial Carcinoma (BLCA)</label><br />
+            <label><input type="radio" name="cancerType" value="BRCA_1">Breast Invasive Carcinoma (Luminal) (BRCA_1)</label><br />
+            <label><input type="radio" name="cancerType" value="BRCA_2">Breast Invasive Carcinoma (Basal) (BRCA_2)</label><br />
+            <label><input type="radio" name="cancerType" value="COAD_READ">Colorectal Adenocarcinoma (COAD_READ)</label><br />
+            <label><input type="radio" name="cancerType" value="HNSC">Head and Neck Squamous Cell Carcinoma (HNSC)</label><br />
+            <label><input type="radio" name="cancerType" value="KICH">Kidney Chromophobe (KICH)</label><br />
+            <label><input type="radio" name="cancerType" value="KIRC">Kidney Renal Clear Cell Carcinoma (KIRC)</label><br />
+            <label><input type="radio" name="cancerType" value="KIRP">Kidney Renal Papillary Cell Carcinoma (KIRP)</label><br />
+            <label><input type="radio" name="cancerType" value="LIHC">Liver Hepatocellular Carcinoma (LIHC)</label><br />
+            <label><input type="radio" name="cancerType" value="LUAD">Lung Adenocarcinoma (LUAD)</label><br />
+            <label><input type="radio" name="cancerType" value="LUSC">Lung Squamous Cell Carcinoma (LUSC)</label><br />
+            <label><input type="radio" name="cancerType" value="PRAD">Prostate Adenocarcinoma (PRAD)</label><br />
+            <label><input type="radio" name="cancerType" value="STES">Stomach and Esophageal Carcinoma (STES)</label><br />
+            <label><input type="radio" name="cancerType" value="THCA">Thyroid Carcinoma (THCA)</label><br />
+            <label><input type="radio" name="cancerType" value="UCEC">Uterine Corpus Endometrial Carcinoma (UCEC)</label><br /><br />
+          </div>
+            <p class="selectionHeader"><u>Select Differential Expression Type</u></p>
+            <label><input type="radio" name="DEGtype" value="up" checked>Up regulated in Cancer versus Normal</label><br />
+            <label><input type="radio" name="DEGtype" value="down">Down regulated in Cancer versus Normal</label><br /><br />
+          </form>
+          <form><div class="submit"><button class="button button2" type="button" name="submit" onclick="displaySelection()">Submit</button></div></form>
+        </div>
+        <div style="width: 70%; float:right">
+          <h2 id='displayTitle'></h2>
+      
+          <p id='instructions'></p>
+          <div id="displayTable"></div>
+          <p id="downloadInstructions"></p>
+          <p id='DEGdownloadLink'></p>
+          <p id='LassoDownloadlink'></p>
+          <p id='AUCDownloadLink'></p>
+          <p id='BartDownloadLink'></p>
+          <p id='explain'></p>
+          <hr>
+        </div>
+        </div>
+        
+      <br style="clear:both;"/>
+  <!-- a section to just display the violin plots and bar graphs since they're independent of BART results -->
+  <h1>Transcriptional Regulator Plots</h1>
+  <div class="row">
+    <div class="column">
+      <div class="selections" id="tfTable"></div>
+      <p>* C_R denotes COAD_READ <br> For more information about these figures, please refer to the <a href="help/index.html#plot_help">Help</a> page.</p>
+    </div>
+    <div class="column2">
+      <div id="graph4"><img src="imgs/scatterPlots/AFF4_scatter.png" style="width:780px;height780px;"></div>
+      <div id="graph1"><img src="imgs/ViolinPlots/AFF4_vioPlot.png" style="width:780px;height:293px;" title="Expression distribution of transcriptional regulator across all cancer types."></div><br>
+      <div id="graph2"><img src="imgs/re_rank/AFF4_re_rank.png" style="width:780px;height:293px;" title="Relative Rank of transcriptional regulator across all cancer types (upregulated), the higher the bar, the better the prediction."></div><br>
+      <div id="graph3"><img src="imgs/likelihood_barPlot/AFF4_bar.png" style="width:780px;height:293px;" title="Likelihood Ratio from Cistrome Cancer"></div>
+    </div>
+  </div>
+
+  <hr>
+
+	<h1>Links for More Information</h1>
+    <ul>
+      <li class="source"><a href="https://faculty.virginia.edu/zanglab/index.htm" target="_blank">Zang Lab UVA</a></li>
+      <li class="source"><a href="http://bartweb2.uvadcos.io/" target="_blank">BART Web</a></li>
+      <li class="source"><a href="https://faculty.virginia.edu/zanglab/bart/index.htm" target="_blank">BART Python Package</a></li>
+      <li class="source"><a href="https://github.com/zanglab/bart2" target="_blank">BART on GitHub</a></li>
+    </ul>
+  </div>
+  <div id="footer-contents">
+    <p id="footer-copy">Chongzhi Zang Lab 2020</p>
+  </div>
+
+  <!--
+   End of footer data
+
+</div>
+<div align=center>Chongzhi Zang Lab 2020</div>
+-->
+
+
+</body>
+</html>
