--- a/people.htm
+++ b/people.htm
@@ -250,7 +250,7 @@ Email: <a href="mailto:xq8zu@virginia.edu">xq8zu@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Xinyue is an undergraduate student (Class of 2021), double majoring in Biology and Statistics. Interested in both genetics and statistical analysis, she is interested in both obtaining knowledge and rich hands-on experience related. In her free time, she enjoys listening to music, traveling, drawing, and playing games. 
 </p><br><br><br>
-<p>
+<!--<p>
 <img align="right" src="images/nathan_lee.jpg" style="width:180px">
 <b>Nathan Lee</b></p>
 <p>
@@ -265,7 +265,7 @@ Nathan Lee is an undergraduate student (class of 2021) majoring in biochemistry 
 Email: <a href="mailto:csh4bj@virginia.edu">csh4bj@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Cameron Her is an undergraduate student (class of 2021) majoring in Biology and Mathematical Statistics. He's curious to explore the applications of statistics in the world of biological research. In his free time, Cameron participates in Hot Kids Comedy and Amuse Bouche Improv.
-</p><br><br><br>
+</p><br><br><br>-->
 <p>
 <img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
 <b>Drew Vanichkachorn</b></p>
@@ -299,14 +299,14 @@ Email: <a href="mailto:mjb6ep@virginia.edu ">mjb6ep@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Maggie Bujor is a Computer Science Major in the class of 2022. She is interested in learning more about the exciting advances in computational genomics at the intersection of data science and biology. In the future, she hopes to attend medical school to become a physician. Outside of class, she is a member of Virginia Dance Company, volunteers actively through Madison House, and enjoys exploring Charlottesville and the Shenandoah.
 </p><br>
-<p>
+<!--<p>
 <img align="right" src="images/ishaan_dey.jpg" style="width:180px">
 <b>Ishaan Dey</b></p>
 <p>
 Email: <a href="mailto:id8tm@virginia.edu ">id8tm@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Ishaan is an undergraduate student (Class of 2022) from Centreville, VA, intending to study Biostatistics and Economics on the pre-med track. He is particularly interested in exploring the intersection of machine learning and medical data. In his free time, Ishaan enjoys photography, playing basketball, and exploring the food scene at Charlottesville.
-</p><br><br><br>
+</p><br><br><br>-->
 <p>
 <img align="right" src="images/minaal_khan.jpg" style="width:180px">
 <b>Minaal Khan</b></p>
@@ -347,6 +347,14 @@ Email: <a href="mailto:tk6ar@virginia.edu">tk6ar@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Taehee is an undergraduate student (Class of 2022) from New Jersey. She is a Biology and Statistics double-major. She is excited to learn about the research methods used in Computational Biology, applying what she learned in her Biology and Statistics classes. She has been an Intro Bio Lab peer teacher, a Madison House volunteer, and an intern at the Avison Biomedical Research Center in South Korea. She is currently an Intro Chem Lab TA and works as a Korean translator at an orthopedic office. In her free time, she enjoys watching Netflix, Zumba, and training her dog, Kota. 
 </p><br>
+<p>
+<img align="right" src="images/kuki_davey.jpg" style="width:180px">
+<b>Kuki Davey</b></p>
+<p>
+Email: <a href="mailto:kkd7tu@virginia.edu">kkd7tu@virginia.edu</a><br>
+</p><p style="width: 640px;" align="left">
+Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
+</p><br><br>
 <h4><font color="#002F6C">Class of 2023</font></h4>
 <p>
 <img align="right" src="images/anvitha_chimata.jpg" style="width:180px">
@@ -526,7 +534,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p>The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 20, 2020</p>
+<p align="right">Last modified: August 25, 2020</p>
 
 </div>
 
