--- a/people.htm
+++ b/people.htm
@@ -281,7 +281,15 @@ Drew Vanichkachorn is an undergraduate student (Class of 2021) in the College of
 Email: <a href="mailto:sn7mq@virginia.edu">sn7mq@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Shahbaz Nizam is a Statistics and Economics major in the class of 2021. He is interested in learning about data science and its application with finance and marketing. In his free time, he enjoys traveling, cooking foreign cuisines, and watching movies.
-</p><br><br><br>
+</p><br><br><br><br>
+<p>
+<img align="right" src="images/alex_hickman.jpg" style="width:180px">
+<b>Alex Hickman</b></p>
+<p>
+Email: <a href="mailto:azh5kn@virginia.edu">azh5kn@virginia.edu</a><br>
+</p><p style="width: 640px;" align="left">
+Alex Hickman is a Biomedical Engineering major (Class of 2021) interested in cell and molecular biology and biomedical data science. She is looking forward to pursuing research related to computational biology and applying what she has learned from her previous research in head and neck cancer. After graduating, she hopes to attend a graduate program in computer science in order to prepare her for the world of data science! In her free time, she enjoys kayaking, biking, playing the ukulele, volunteering, and painting with Bob Ross.
+</p><br>
 <h4><font color="#002F6C">Class of 2022</font></h4>
 <p>
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
@@ -534,7 +542,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p>The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 25, 2020</p>
+<p align="right">Last modified: August 28, 2020</p>
 
 </div>
 
