--- a/publication.htm
+++ b/publication.htm
@@ -129,19 +129,19 @@ function myFunction() {
 <br>
 <b>bioRxiv</b> 2020.01.17.952838 (2020)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2020.01.17.910687v1" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
-Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L Safgren, Kathryn A Helmin, Emmalee R Adelman, Kyle P Eagen, Alexandre Gaspar-Maia, Maria E Figueroa, Benjamin D Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
-<br>
-<b>bioRxiv</b> 2020.01.17.910687. Accepted to <i><b>Genome Biology</b></i> (2020)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px;">
+<li><p><a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
+Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<i><b>Genome Biology</b></i> 21, 247 (2020)
+</p></li>
 <li><p><a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank">Polyadenylation of histone H3.1 mRNA promotes cell transformation by displacing H3.3 from gene regulatory elements</a><br>
 Danqi Chen*, Qiao Yi Chen*, <u>Zhenjia Wang</u>*, Yusha Zhu, Thomas Kluz, <u>Wuwei Tan</u>, Jinquan Li, Feng Wu, Lei Fang, Xiaoru Zhang, <u>Rongquan He</u>, Steven Shen, Hong Sun, <u>Chongzhi Zang</u><sup>#</sup>, Chunyuan Jin<sup>#</sup>, Max Costa<sup>#</sup>
 <br>
-<i><b>iScience</b></i> doi: 10.1016/j.isci.2020.101518 (2020)
+<i><b>iScience</b></i> 23, 101518 (2020)
 </p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-020-2493-4" target="_blank">Expanded encyclopaedias of DNA elements in the human and mouse genomes</a><br> 
 <u>The ENCODE Project Consortium</u>, Jill E. Moore*, Michael J. Purcaro*, Henry E. Pratt*, Charles B. Epstein*, Noam Shoresh*, Jessika Adrian*, Trupti Kawli*, Carrie A. Davis*, Alexander Dobin*, Rajinder Kaul*, Jessica Halow*, Eric L. Van Nostrand*, Peter Freese*, David U. Gorkin*, Yin Shen*, Yupeng He*, Mark Mackiewicz*, Florencia Pauli-Behn*, Brian A. Williams, Ali Mortazavi, Cheryl A. Keller, Xiao-Ou Zhang, Shaimae I. Elhajjajy, Jack Huey, Diane E. Dickel, Valentina Snetkova, Xintao Wei, Xiaofeng Wang, Juan Carlos Rivera-Mulia, Joel Rozowsky, Jing Zhang, Surya B. Chhetri, Jialing Zhang, Alec Victorsen, Kevin P. White, Axel Visel, Gene W. Yeo, Christopher B. Burge, Eric Lécuyer, David M. Gilbert, Job Dekker, John Rinn, Eric M. Mendenhall, Joseph R. Ecker, Manolis Kellis, Robert J. Klein, William S. Noble, Anshul Kundaje, Roderic Guigó, Peggy J. Farnham, J. Michael Cherry<sup>#</sup>, Richard M. Myers<sup>#</sup>, Bing Ren<sup>#</sup>, Brenton R. Graveley<sup>#</sup>, Mark B. Gerstein<sup>#</sup>, Len A. Pennacchio<sup>#</sup>, Michael P. Snyder<sup>#</sup>, Bradley E. Bernstein<sup>#</sup>, Barbara Wold<sup>#</sup>, Ross C. Hardison<sup>#</sup>, Thomas R. Gingeras<sup>#</sup>, John A. Stamatoyannopoulos<sup>#</sup>, Zhiping Weng<sup>#</sup><br>
@@ -314,7 +314,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: September 10, 2020</p>
+<p align="right">Last modified: September 15, 2020</p>
 </div>
 
 </body></html>
