--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,20 @@ function myFunction() {
 <div class="row">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">September 2020</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Our cancer CTCF paper is published in <a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank"><i>Genome Biology</i></a>. Congratulations Zhenjia!
+		<br><br>
+		Our collaboration paper on histone H3 variant activity with Chunyuan Jin and Max Costa at NYU is published in <a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank"><i>iScience</i></a>. Congratulations Zhenjia, Wuwei and Rongquan!
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">August 2020</font>
 		</p>
 	</div>
@@ -563,7 +577,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 20, 2020</p>
+<p align="right">Last modified: September 15, 2020</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
