--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Zhenjia gives a talk at <a href="images/ES_Symposium_Flyer_Fall2020-ZWang-30Sept20.pdf" target="_blank">Emerging Scholars in Genome Sciences Symposium Series</a> organized by CPHG.
+		<br><br>
 		Our cancer CTCF paper is published in <a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank"><i>Genome Biology</i></a>. Congratulations Zhenjia!
 		<br><br>
 		Our collaboration paper on histone H3 variant activity with Chunyuan Jin and Max Costa at NYU is published in <a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank"><i>iScience</i></a>. Congratulations Zhenjia, Wuwei and Rongquan!
@@ -577,7 +579,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 15, 2020</p>
+<p align="right">Last modified: September 30, 2020</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
