--- a/people.htm
+++ b/people.htm
@@ -156,7 +156,7 @@ function myFunction() {
 Office: <a href="http://www.virginia.edu/webmap/popPages/130-westcomplex.html" target="_blank" style="text-decoration:none;">West Complex</a>, Room 6131C<br>
 Phone: 434-243-5397<br>
 Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a><br>
-Website: <a href="http://faculty.virginia.edu/zang" target="_blank">faculty.virginia.edu/zang</a><br>
+Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><br>
 <a href="https://med.virginia.edu/faculty/faculty-listing/cz3d/" target="_blank">School of Medicine faculty profile</a><br>
 <a href="https://engineering.virginia.edu/faculty/chongzhi-zang" target="_blank">School of Engineering faculty profile</a><br>
 <a href="CV_chongzhi_zang.pdf" target="_blank">Curriculum Vitae</a> <a href="https://orcid.org/0000-0003-4812-3627" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a>
@@ -542,7 +542,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p>The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 28, 2020</p>
+<p align="right">Last modified: September 30, 2020</p>
 
 </div>
 
